--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -36,11 +36,17 @@
   },
   "ignorePatterns": [
     ".eslintrc.json",
+    ".commitlint.config.js",
     ".css"
   ],
   "rules": {
     "@typescript-eslint/interface-name-prefix": "off",
-    "@typescript-eslint/explicit-function-return-type": "off",
+    "@typescript-eslint/explicit-function-return-type": [
+      "error",
+      {
+        "allowExpressions": true
+      }
+    ],
     "@typescript-eslint/explicit-module-boundary-types": "off",
     "@typescript-eslint/no-explicit-any": "off",
     "class-methods-use-this": "off",
