--- a/package.json
+++ b/package.json
@@ -9,18 +9,25 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint \"{src,test}/**/*.{ts,tsx}\"",
-    "lint:fix": "eslint \"{src,test}/**/*.{ts,tsx}\" --fix"
+    "lint:fix": "eslint \"{src,test}/**/*.{ts,tsx}\" --fix",
+    "spell": "cspell \"{src,apps,libs,test}/**/*.ts\" /*.md /*.json /*.js",
+    "commit": "git-cz"
   },
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@commitlint/cli": "^17.5.0",
+    "@commitlint/config-conventional": "^17.4.4",
+    "@commitlint/cz-commitlint": "^17.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "commitizen": "^4.0.3",
+    "cspell": "^6.31.1",
     "eslint": "^8.0.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
@@ -34,8 +41,14 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
+    "inquirer": "^8.0.0",
     "prettier": "^2.8.7",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "@commitlint/cz-commitlint"
+    }
   }
 }
