--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@typescript-eslint/eslint-plugin": "^5.13.0",
     "@typescript-eslint/parser": "^5.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
     "commitizen": "^4.0.3",
     "cspell": "^6.31.1",
     "eslint": "^8.0.1",
@@ -42,7 +43,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "husky": "^8.0.3",
     "inquirer": "^8.0.0",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "tailwindcss": "^3.2.7",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
   },
